package scratch.model;

public abstract class  Action {
  public void execute(ExecutionContext e ){

  }

   public boolean isValid(ExecutionContext e ){
      return false;
   }
}
