package scratch.model;

public enum ActionType {
    MOVE_FORWARD,
    TURN_LEFT,
    TURN_RIGHT,
    PEN_UP,
    PEN_DOWN
}
