package scratch.model;

public abstract class  ParameterizedAction {
    private int value ;


}
