package scratch.model;

public class Segment {
}
